--- a/csc300x-hw2/pie.css
+++ b/csc300x-hw2/pie.css
@@ -8,7 +8,7 @@ body{
     background-size: 100px;
 }
 
-ul2{
+#listimage{
     list-style-image: url(pie_icon.gif);
 }
 
@@ -20,7 +20,6 @@ a:link, a:visited, h1, h2{
     font-style: italic;
     margin-left: 40px;
     background-color: #FFFFA8;
-    display:inline-flexbox;
     margin-right:40px;
 }
 
