final commit for assingment 2

--- a/csc300x-hw2/pie.css
+++ b/csc300x-hw2/pie.css
@@ -1,3 +1,11 @@
+/*
+Name: Sebastian Duarte
+Assignment: Assignment: Index webpage for a company called Granny's pies and 
+    a page for a lemon meringue pie recipe
+File Contents:  Style sheet for webpage containing lemon meringue pie
+    recipe.
+*/
+
 body{
     background-color: white;
     color: #404040;
