--- a/csc300x-hw2/index.css
+++ b/csc300x-hw2/index.css
@@ -1,3 +1,11 @@
+/*
+Sebastian Duarte
+Assignment: Index webpage for a company called Granny's pies and 
+    a page for a lemon meringue pie recipe
+File Contents: Style sheet for the index webpage for a company called
+    Granny's pies.
+*/
+
 body{
     background-color: rgb(221, 233, 229);
 }
