--- a/csc300x-hw3/styles.css
+++ b/csc300x-hw3/styles.css
@@ -1,24 +1,48 @@
+/*
+Name: Sebastian Duarte
+Assignment: Assignment: CSC300x HW 3
+File Contents:  Style sheet for Spartan Eats and Meal Page
+*/
+
 body{
     background-color: aliceblue;
 }
 
 header{
     font-size: 35px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bolder;
     text-align: center;
     background-color:rgb(206, 114, 212);
-    padding: 10px;
+}
+
+header, article, .flex-item, .flex-item2{
     border-radius: 10px;
 }
 
+header, #meal-list{
+    padding: 10px;
+}
+
+header, a{
+    font-weight: bolder;
+}
+
+header, h1{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 article{
-    background-color: rgb(222, 232, 240);
-    font-size: 20px;
     padding: 15px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border-radius: 10px;
 }
+
+article, a, #meal-list, .flex-item, .flex-item2{
+    background-color: rgb(222, 232, 240);
+}
+
+article, #meal-list, .flex-item, .flex-item2{
+    font-size: 20px;
+}
+
 small{
     font-size: 10px;
     padding: 0px;
@@ -26,72 +50,66 @@ small{
 
 h1{
     font-size: 27px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h2{
+h2, h3{
     font-size: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h2, #meal-list{
     text-align: center;
 }
 
-h3{
-    font-size: 25px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
 a{
     font-size: 30px;
     text-decoration: none;
     color: black;
-    background-color:  rgb(222, 232, 240);
-    font-weight: bolder;
     padding:20px;
 }
 
 #meal-list{
     list-style: none;
-    font-size: 20px;
-    background-color:rgb(222, 232, 240);
-    padding:10px;
-    text-align: center;
 }
 
 .flex-container1{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items:center;
     flex-direction: column;
 }
 
+.flex-container1, .flex-container2, .flex-container3{
+    display: flex;
+    flex-wrap: wrap;
+    align-items:center;
+}
+
+.flex-container1, .flex-container2{
+    justify-content: space-between;
+}
+
+
+
 .flex-container2 img{
     border-radius: 30px;
+}
+
+.flex-container2 img, .flex-item2{
     width: 250px;
 }
 
 .image-hidden-info{
     display: none;
-
 }
 
 .image-shown-info{
     display:unset;
 }
 
-.flex-container2{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+.flex-container2, .flex-container3{
     flex-direction: row;
 }
 
 .flex-container3{
-    display: flex;
-    flex-wrap: wrap;
     justify-content:space-evenly;
-    align-items: center;
-    flex-direction: row;
 }
 
 .item{
@@ -100,13 +118,9 @@ a{
 }
 
 .flex-item, .flex-item2{
-    border-radius: 10px;
     margin: 15px 0;
-    background-color: rgb(222, 232, 240);
-    font-size: 20px;
 }
 .flex-item2{
     margin-left: 20px;
     margin-right: 20px;
-    width:250px;
 }
