--- a/csc300x-project/styles/styles.css
+++ b/csc300x-project/styles/styles.css
@@ -8,35 +8,36 @@ header{
     font-size: 18pt;
 }
 
-header, footer, .dropdown-button{
+header, footer, .dropdown-button, .flex-item{
     background-color: aquamarine;
+    border-radius: 10px;
 }
 
-header, footer, #splash-section{
+header, footer, .splash-section, .flex-item, .flex-item2, .flex-item3{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#splash-section section{
+.splash-section section, h3, .flex-item2, .flex-item3{
     text-align: center;
 }
-.dropdown-options a, #splash-section section{
+.dropdown-options a, .splash-section section{
     padding:8px;
 }
 
-#splash-section header{
+.splash-section header{
     color:rgb(197, 127, 6);
     font-size: 23px;
     background-color: white;
     padding: 10px;
 }
-#splash-section header, #search-button{
+.splash-section header, #search-button{
     font-weight: bold;
 }
 
-#splash-section{
+.splash-section{
     vertical-align: text-top;
 }
-#splash-section, h2, .dropdown-button{
+.splash-section, h2, .dropdown-button, .flex-item3, .product-Name{
     font-size: 20px;
 }
 
@@ -44,69 +45,108 @@ h2{
     color:rgb(247, 146, 31);
 }
 
-.flex-container{
+h3, h4{
+    font-size: 27px;
+    padding: 8px;
+    color: rgb(34, 139, 76);
+}
+
+h4{
+    text-align: left;
+}
+
+.flex-container, .flex-container2{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items:center;
     flex-direction: row;
 }
 
-.flex-container input[type=text]{
+.flex-container input[type=text], .product-Price{
     font-size: 18px;
-
 }
 
 .flex-container a{
     color: rgb(0, 0, 0);
+}
+.flex-container a, .dropdown-options a{
     text-decoration: none;
 }
 
 .flex-container a, .dropdown-button{
-    font-weight:bolder;
+    font-weight: bolder;
 }
 
 .dropdown-section{
-    position:relative;
+    position: relative;
     display: inline-block;
 }
 
 .dropdown-button{
-    border:none;
+    border: none;
 }
 
 .dropdown-options{
     display: none;
-    position:absolute;
+    position: absolute;
     background-color: rgb(151, 196, 112);
     min-width: 100px;
     box-shadow: 0px 7px 10px 0px rgb(147, 172, 243);
     right: 0;
     text-align: right;
-    background-size:cover;
+    background-size: cover;
 }
 
 .dropdown-options a{
     color:rgb(67, 65, 65);
     font-size: 14px;
-    text-decoration: none;
 }
 
 .dropdown-section:hover .dropdown-options, .dropdown-options a{
     display: block;
 }
 
-#search-button{
+.goButton{
     background-color: rgb(190, 255, 61);
     font-family: comic;
+    border-color: rgb(244, 164, 164);
+    border-style: groove;
+    padding: 5px;
 }
 
 .flex-container img{
-    width: 2%;
-    height: 2%;
-    
+    width: 100px;
 }
 .flex-item{
-    border-radius: 10px;
-    margin:20px 0
+    margin: 20px 0;
+}
+.flex-item2{
+    width: 125px;
+    height: 300px;
+}
+
+.flex-item2, .flex-item3{
+    border-radius: 20px;
+    background-color: rgb(239, 247, 244);
+    background-size:cover;
+    margin: 10px;
+}
+
+.flex-item3{
+    padding:5px;
+}
+
+.product-Name{
+    color:rgba(225, 61, 61, 0.836);
+}
+.product-Price{
+    color:rgba(174, 45, 45, 0.836);
+}
+.cart-Image{
+    width: 25px;
+    height: 25px;
+}
+.qty input[type=text]{
+    width: 30px;
 }
