Final commit Part 1 HW 5

--- a/csc300x-hw5/styles.css
+++ b/csc300x-hw5/styles.css
@@ -1,3 +1,10 @@
+/*
+Name: Sebastian Duarte
+Assignment: Assignment: CSC300x HW 5
+File Contents:  Style sheet for github gallery
+*/
+
+
 body {
     background-color: black;
     margin: 0px;
